# duckdb-cog

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  pyproject.toml  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: block_danger.py  guard_edits.py  stop_check.sh
.github/workflows/: Lint.yml  MainDistributionPipeline.yml
crates/engine/: Cargo.toml
crates/engine/benches/: read_bench.rs
crates/engine/src/: cache.rs  lib.rs  meta.rs  pixel.rs  source.rs  stac.rs
crates/engine/tests/: fetch_contract.rs  pixel_value.rs  prop_invariants.proptest-regressions  prop_invariants.rs  reader_cache.rs  stac_parse.rs
docs/: HARNESS.md  RFC-001-rev3.md  icechunk-gate-review.md  intro-ko.md  sedona-semantics.md
docs/benchmarks/: 2026-07-12-comparative.md  2026-07-12-io-path-ab.md  2026-07-23-timeseries.md
examples/: use-cases.ipynb
scripts/: bench_compare.py  bench_io_compare.py  bench_timeseries.py  gen_fixtures.py  mock_stac_api.py
src/: io_bench.rs  lib.rs  rs_meta.rs  stac_search.rs
test/data/stac/: items.json  search_page1.json  search_page2.json  single_item.json  with_stats.json
test/sql/: cog_version.test  io_bench.test  read_cog.test  read_cog_bbox.test  read_cog_http.test  read_stac.test  read_stac_search.test  rs_band_array.test  rs_coord.test  rs_metadata.test  rs_nd.test  rs_value.test  rs_values.test  rs_zonal.test
tests/oracle/: README.md  test_fixture_basic.py  test_fixture_edge.py  test_fixture_matrix.py  test_fixture_multiband.py  test_fixture_stats.py  test_fixture_tiny.py  test_rs_value_oracle.py
