# 표준: duckdb/extension-template-rs 구조 (익스텐션 크레이트가 리포 루트)
# + workspace 로 crates/engine 을 함께 관리
[package]
name = "cog"                 # → libcog.so → cog.duckdb_extension
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

# WASM(emscripten) 빌드용 staticlib 우회 — 템플릿 관례, 내용 변경 금지
[[example]]
name = "cog"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "~1.10504.0", features = ["loadable-extension", "vscalar"] }

# emscripten(DuckDB-Wasm 배포 잡)은 emsdk 3.1.71 궁합으로 Rust 1.86 고정인데
# async-tiff 는 MSRV ≥1.87 — 그 타깃에서만 engine 의 reader feature 를 끈다.
# read_cog 는 DuckDB-Wasm 빌드에서 제외 (RFC 사이드카 결정과 일관, worklog 참조).
[target.'cfg(not(target_os = "emscripten"))'.dependencies]
engine = { path = "crates/engine" }
# 원격 IO: object_store 직행 (RFC §6.5 (a)) — http(s)/s3. async-tiff 와 동일 계열 버전.
object_store = { version = "0.13", features = ["http", "aws"] }
url = "2"
# object_store(reqwest) future 는 tokio reactor 가 필요 — 익스텐션 수명에 묶인 런타임 1개.
tokio = { version = "1", features = ["rt-multi-thread"] }
# STAC API 검색(POST /search)용 JSON HTTP 클라이언트 (RFC §6.7, 이슈 #29) —
# object_store 가 이미 끄는 reqwest/rustls 계열과 버전·TLS 스택을 공유한다.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
engine = { path = "crates/engine", default-features = false }

[workspace]
resolver = "2"
members = ["crates/engine"]
