# duckdb-cog 테스트 도구 환경 (오라클 T1 + 픽스처 생성 T2).
# 제품 코드 아님 — GDAL/rasterio는 여기(tests/, scripts/)서만 허용 (RFC N4).
# rasterio 정확 고정: wheel에 GDAL이 번들되므로 버전 고정 = 픽스처 바이트 결정성.
[project]
name = "duckdb-cog-testkit"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "rasterio==1.4.3",
    "numpy>=2,<3",
    "pytest>=8",
    # E2E 원격 IO 테스트용 Range GET 지원 정적 서버 (ext-test 가 픽스처 서빙에 사용)
    "rangehttpserver==1.4.0",
]

[tool.uv]
package = false
