[package]
name = "engine"            # 임시명 — 엔진 크레이트 네이밍은 미결 (RFC R6 참조)
version = "0.0.1"
edition = "2021"
license = "MIT"

[features]
default = ["reader"]
# reader = async-tiff 기반 COG 메타데이터 읽기 (source.rs / meta.rs).
# 배포 CI의 emscripten 잡은 Rust 1.86 고정(emsdk 3.1.71 궁합)인데 async-tiff 0.3 은
# MSRV ≥1.87 — 그래서 emscripten 타깃에서만 이 feature 를 끈다 (루트 Cargo.toml 참조).
reader = ["dep:async-tiff", "dep:async-trait", "dep:bytes", "dep:futures"]

[dependencies]
# async-tiff: decode/fetch 위임 대상 (RFC N7). 직접 호출은 source.rs 경계 뒤에서만 (R8).
# default-features off: object_store/reqwest 제외 — 로컬 파일은 ByteSource 구현으로 공급,
# 원격 IO 경로는 다음 슬라이스에서 결정 (§6.5). tokio 런타임 비의존 유지 (G8 wasm).
async-tiff = { version = "0.3", default-features = false, optional = true }
async-trait = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", features = ["executor"], optional = true }

[dev-dependencies]
# T4 property-based 불변식 (RFC §6.9) — dev 전용, wasm 판정(cargo check)과 무관
proptest = "1"
